# djangositez01

./: README.md  pyproject.toml
djangosite/: settings.py  urls.py
templates/: homepage.html
webpage/: views.py
