[tool.poetry]
name = "djang002"
version = "0.1.0"
description = "application"
authors = ["idolla <3rick8@A.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.1"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
